# camcli

./: CMakeLists.txt  bitmap_sink.cpp  bitmap_sink.h  camera.cpp  camera.h  color_converter.cpp  color_converter.h  d3d_factory.cpp  d3d_factory.h  main.cpp  media_source_stream.cpp  media_source_stream.h  mf_session.cpp  mf_session.h  resizer.cpp  resizer.h  sample.h  sample_filter.h  sample_sink.h  sample_stream.h  stream_pipeline.cpp  stream_pipeline.h  utils.h  video_processor.cpp  video_processor.h  win_graphics.cpp  win_graphics.h  window_renderer.cpp  window_renderer.h
